[package]
name = "stream-tun"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tagger"
path = "src/bin/tagger.rs"

[[bin]]
name = "dedup"
path = "src/bin/dedup.rs"

[dependencies]
tun = "0.5"
socket2 = "0.5"
libc = "0.2.174"
nfq = "0.2.5"
pnet = "0.33"
clap = { version = "4.5.40", features = ["derive"] }
