[package]
name = "unison"
version = "0.1.0"
edition = "2024"

[dependencies]
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2.174"
nfq = "0.2.5"
pnet = "0.33"
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"
sudo = "0.6.0"
o2o = "0.5.4"
hmac = "0.12.1"
sha2 = "0.10.9"
indicatif = "0.18.0"
console = "0.16.0"
